test/integration/invalid-href/pages/[post].js
export default () => 'hi from post'
